@@ -2832,6 +2832,8 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
 
   ssize_t
     count,
+    rescale_intercept,
+    rescale_slope,
     scene,
     window_center,
     y;
@@ -2900,6 +2902,8 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
   max_value=255UL;
   mask=0xffff;
   number_scenes=1;
+  rescale_intercept=0;
+  rescale_slope=1;
   samples_per_pixel=1;
   scale=(Quantum *) NULL;
   sequence=MagickFalse;
@@ -3302,6 +3306,24 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
             */
             if (data != (unsigned char *) NULL)
               window_width=StringToUnsignedLong((char *) data);
+            break;
+          }
+          case 0x1052:
+          {
+            /*
+              Rescale intercept
+            */
+            if (data != (unsigned char *) NULL)
+              rescale_intercept=(ssize_t) StringToLong((char *) data);
+            break;
+          }
+          case 0x1053:
+          {
+            /*
+              Rescale slope
+            */
+            if (data != (unsigned char *) NULL)
+              rescale_slope=(ssize_t) StringToLong((char *) data);
             break;
           }
           case 0x1200:
@@ -3869,7 +3891,7 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
                       else
                         pixel_value=ReadDCMShort(stream_info,image);
                       if (polarity != MagickFalse)
-                        pixel_value=max_value-pixel_value;
+                        pixel_value=(int)max_value-pixel_value;
                     }
                   else
                     {
@@ -3884,11 +3906,11 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
                         }
                       i++;
                     }
-                index=pixel_value;
+                index=(pixel_value*rescale_slope)+rescale_intercept;
                 if (window_width == 0)
                   {
                     if (signed_data == 1)
-                      index=pixel_value-32767;
+                      index-=32767;
                   }
                 else
                   {
@@ -3900,13 +3922,13 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
                       (window_width-1.0)/2.0-0.5);
                     window_max=(ssize_t) floor((double) window_center+
                       (window_width-1.0)/2.0+0.5);
-                    if ((ssize_t) pixel_value <= window_min)
+                    if ((ssize_t) index <= window_min)
                       index=0;
                     else
-                      if ((ssize_t) pixel_value > window_max)
+                      if ((ssize_t) index > window_max)
                         index=(int) max_value;
                       else
-                        index=(int) (max_value*(((pixel_value-window_center-
+                        index=(int) (max_value*(((index-window_center-
                           0.5)/(window_width-1))+0.5));
                   }
                 index&=mask;
@@ -3995,11 +4017,11 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
                           }
                         i++;
                       }
-                  index=pixel_value;
+                  index=(pixel_value*rescale_slope)+rescale_intercept;
                   if (window_width == 0)
                     {
                       if (signed_data == 1)
-                        index=pixel_value-32767;
+                        index-=32767;
                     }
                   else
                     {
@@ -4011,13 +4033,13 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
                         (window_width-1.0)/2.0-0.5);
                       window_max=(ssize_t) floor((double) window_center+
                         (window_width-1.0)/2.0+0.5);
-                      if ((ssize_t) pixel_value <= window_min)
+                      if ((ssize_t) index <= window_min)
                         index=0;
                       else
-                        if ((ssize_t) pixel_value > window_max)
+                        if ((ssize_t) index > window_max)
                           index=(int) max_value;
                         else
-                          index=(int) (max_value*(((pixel_value-window_center-
+                          index=(int) (max_value*(((index-window_center-
                             0.5)/(window_width-1))+0.5));
                     }
                   index&=mask;
